examples/test/testpolicy681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy681
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key8: value14
      key4: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value28
          key25: value35
          key4: value38
      podSelector:
        matchLabels:
          key19: value22
          key6: value44
